HTM-1646: introduce password reset API and controller using spring-boot-starter-mail
